# arkiv

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CODEX_RESULT.md  CODEX_RESULT_phase7-6.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION.txt  OVERNIGHT_RESUME.md  README.md  README.zh-TW.md  TAILWIND-CSS-README.md  VERIFY.md  admin.py  api.py  app.py  arkiv.command  arkiv_cli.py  arkiv_token.py  auth.py  bench_guard_ab.py  bench_guard_ab_results.json  bench_guard_ab_results_mac.json  bench_guard_ab_texts.json  bench_guard_ab_texts_mac.json  bench_ingest.json  bench_qwen3_asr.py  bench_qwen3_asr_aligned.py  bench_qwen3_asr_aligned_results.json  bench_qwen3_asr_results.json  bench_stt.py  bins.py  camera_report.py  chat.py  (+59 more)
.claude/: handover-current-status.md  handover-whisperx.md  handover.md
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: 2026-07-12-fable-self-check-baseline.md  2026-07-13-fable-round5-review.md  architecture-anti-hallucination-guard.md  auth-tokens-1a-handover.md  auth-tokens-1b-handover.md  auth-tokens-1c-handover.md  benchmark-model-upgrade-20260402.md  chat-rag-4a-handover.md  chat-rag-4b-handover.md  chat-rag-4c-codex-result.md  chat-rag-4c-handover.md  faq.md  frame-exact-inout-roadmap.md  grok-external-agent.md  index.md  install.md  llm-router-handover.md  phase-11.5-acceptance.md  phase-14-mcp-handover.md  phase-16.1-token-hash-decision.md  phase-16.2-path-leak-triage.md  phase8-handover.md  pipeline.md  pipeline.zh-TW.md  quickstart-mac.md  roadmap.md  session-log-2026-04-24.md  transcribe-fasterwhisper-handover.md
docs/adr/: 0001-dit-offload-wrapper.md
docs/design/redesign-2026/: README.md  _sections.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: render-social.mjs
frontend/scripts/audit/: forbidden-css.mjs  gate.sh  shoot.mjs  verify-chat.mjs  verify-collections.mjs  verify-ingest-ui.mjs  verify-ingest-ws.mjs  verify-live.mjs  verify-rating.mjs  verify-sidebar.mjs
frontend/src/: App.svelte  app.css  main.js
frontend/src/lib/: ArkivLogo.svelte  CornerTick.svelte  Eyebrow.svelte  FilterRow.svelte  Frame.svelte  Inspector.svelte  MainShell.svelte  MediaCard.svelte  Mono.svelte  Pano360.svelte  PoolSidebar.svelte  Rating.svelte  Sweep.svelte  Thumb.svelte  ToastHost.svelte  TopBar.svelte  ViewToggle.svelte  Waveform.svelte  api.js  (+4 more)
resolve_plugin/: arkiv_resolve.py
routers/: __init__.py  admin.py  analytics.py  bins.py  cache.py  chat.py  export.py  ingest.py  media.py  misc.py  offload.py  projects.py  proxy.py  recorrect.py  retranscribe.py  sample.py  search.py  settings.py
sample/: LICENSES.md
sample/prebuilt/: arkiv-sample.tar  manifest.json
scripts/: build_sample_prebuilt.py  github-support-ticket-draft.md  grok-consult.sh  install-hooks.sh  purge-history.sh  scrub-commit-messages.sh  seed_sample.py
src-tauri/: Cargo.toml  assemble-backend.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: conftest.py  test_arkiv_cli.py  test_audit_20260610.py  test_audit_20260612.py  test_auth.py  test_bin_copy.py  test_bins.py  test_camera_report.py  test_chat.py  test_codec.py  test_collections.py  test_config.py  test_corrections.py  test_db.py  test_diarize_a4.py  test_dit_offload_ui.py  test_export.py  test_export_batch.py  test_federation.py  test_frames_360.py  test_geo.py  test_hardening_concurrency.py  test_hardening_projpath.py  test_hardening_round4.py  test_ingest.py  test_ingest_llm_shape.py  test_ingest_microtasks.py  test_ingest_options.py  test_ingest_resource.py  test_install.py  test_llm_router.py  test_mcp_e2e.py  test_mcp_server.py  test_mhl.py  test_move_detection.py  test_offload.py  test_offload_card_watch.py  test_offload_organize.py  test_payload_diet.py  test_phase8.py  (+67 more)
whisper_guard/: README.md  __init__.py  pyproject.toml
(+20 files in other folders)
