# Packaging metadata TEMPLATE for the standalone whisper-guard release.
# This package is currently vendored inside arkiv and imported in-tree — do NOT
# build from inside this directory (packages=["whisper_guard"] resolves only
# when pyproject.toml sits ONE LEVEL ABOVE the whisper_guard/ package dir).
# To publish: create vulture-s/whisper-guard whose ROOT holds this pyproject.toml
# + README.md, with the whisper_guard/ package dir beside them; then
# `python -m build` + upload to PyPI, and point arkiv at the dependency instead
# of the vendored copy. (Repo creation + publish are owner steps — need the account.)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-guard"
version = "0.1.0"
description = "Pure text-level hallucination filters for Whisper transcripts (repetition + char-loop)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "vulture-s" }]
keywords = ["whisper", "speech-to-text", "transcription", "hallucination", "subtitles"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = []  # stdlib only — that's the point

[project.urls]
Homepage = "https://github.com/vulture-s/whisper-guard"

[tool.hatch.build.targets.wheel]
packages = ["whisper_guard"]
